--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 <script>
   // Config
   const CUT = 27_000; // 27 seconds per story
-  const clips = [
-    {src:"https://drive.google.com/uc?export=download&id=1vr1YqaE90TqF5E6FvwhA6aROcfMHfdqQ", caption:"Rewrite"},
-    {src:"https://drive.google.com/uc?export=download&id=108td2koZk6wADurnsqCa6kVGWW3iCuwj", caption:"Loud Thoughts"},
-    {src:"https://drive.google.com/uc?export=download&id=1BmAEIDTinv5GapQxND8FC_vgxiq9zcby", caption:"The Cheapest Apocalypse"},
-    {src:"https://drive.google.com/uc?export=download&id=1lVPlswS2GQh-UA3VwZAVY1INv_cpoJZp", caption:"Swap"},
-    {src:"https://drive.google.com/uc?export=download&id=1s2aihXJWmsiQJHjrKRpcKTQNAae5Wy40", caption:"Chapter 13"},
-  ];
+ const clips = [
+  {src:"https://dl.dropboxusercontent.com/scl/fi/ci3jsb6eor610xxgnkk14/01-rewrite.mp4.mp4?rlkey=2hodyoqum98fkz5a7txafcbt0&st=zxc2h67u", caption:"Rewrite"},
+  {src:"https://dl.dropboxusercontent.com/scl/fi/tbrm6pgpbnl3d7xlka603/02-loud-thoughts.mp4.mp4?rlkey=fse205d4h2gktepzvxyz6zqis&st=5mh9rfqu", caption:"Loud Thoughts"},
+  {src:"https://dl.dropboxusercontent.com/scl/fi/4vteqjcawowjz5d10h9m1/03-cheapest-apocalypse.mp4.mp4?rlkey=pwvavyfzuczwdtdnq7oz0unql&st=73pv0v5e", caption:"The Cheapest Apocalypse"},
+  {src:"https://dl.dropboxusercontent.com/scl/fi/dvzq0iwf9ghqjxl15bnkp/04-swap.mp4.mp4?rlkey=n5qnk364v9noz3odtk89z0uu4&st=rzyghn3b", caption:"Swap"},
+  {src:"https://dl.dropboxusercontent.com/scl/fi/gx0hb5ds6lhr7w80n07yl/05-chapter-13.mp4.mp4?rlkey=60mqoii3qgzmbhw1ftm615g8q&st=n7wp4drl", caption:"Chapter 13"},
+];
 
   const v = document.getElementById('v');
   const start = document.getElementById('start');
@@ -116,3 +116,4 @@
   });
 </script>
 </html>
+
