--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 <!-- UI -->
 <div id="ui">
   <div class="btn" id="likeBtn">
-    <!-- heart -->
-    <svg viewBox="0 0 24 24"><path d="M12 21s-7.2-4.35-9.33-8.19C1.25 10.83 2.2 7.5 5.4 6.6c2.02-.58 3.73.32 4.6 1.63.87-1.31 2.58-2.21 4.6-1.63 3.2.9 4.15 4.23 2.73 6.21C19.2 16.65 12 21 12 21z"/></svg>
-  </div>
-  <div class="count" id="likeCount"> </div>
+  <!-- heart -->
+  <svg viewBox="0 0 48 48">
+    <path d="M34.6 6c-4.2 0-7.9 2.1-10.6 5.4C21.3 8.1 17.6 6 13.4 6 7.6 6 3 10.6 3 16.4c0 11.1 19 22.5 19 22.5s19-11.4 19-22.5C41 10.6 36.4 6 30.6 6z"/>
+  </svg>
+</div>
 
   <div class="btn">
     <!-- comment -->
@@ -126,3 +127,4 @@
   });
 </script>
 </html>
+
