--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   html,body{margin:0;height:100%;background:#000;overflow:hidden}
   #stage{position:fixed;inset:0;display:grid;place-items:center}
   video{width:100%;height:100%;object-fit:cover}
+
+  /* Desktop and wide screens: center a 9:16 frame, avoid heavy crop */
+  @media (min-width: 768px){
+    #stage{display:flex;align-items:center;justify-content:center}
+    video{
+      width:auto;            /* let height drive size */
+      height:100%;
+      aspect-ratio:9/16;
+      object-fit:contain;    /* show full frame with black bars */
+      background:#000;
+    }
+  }
+
   .slide{animation:slideIn 320ms ease}
   @keyframes slideIn{from{transform:translateY(100%)}to{transform:translateY(0)}}
 
@@ -78,8 +91,7 @@
 <div id="end">put the phone down, it is over</div>
 
 <script>
-  // Per clip durations in milliseconds
-  // Clips 1 to 3 = 34s, clips 4 and 5 = 37s
+  // Per clip durations in milliseconds: 34, 34, 34, 37, 37
   const durations = [34_000, 34_000, 34_000, 37_000, 37_000];
 
   // Pretty numbers like 12.4K
@@ -89,7 +101,7 @@
     return (Math.round(n/100_000)/10).toFixed(1).replace(/\.0$/,'') + 'M';
   };
 
-  // Set starting counts per clip
+  // Starting counts per clip
   const clips = [
     {src:"https://dl.dropboxusercontent.com/scl/fi/ci3jsb6eor610xxgnkk14/01-rewrite.mp4.mp4?rlkey=2hodyoqum98fkz5a7txafcbt0&st=zxc2h67u", caption:"Rewrite", likes: 12400, comments: 312},
     {src:"https://dl.dropboxusercontent.com/scl/fi/tbrm6pgpbnl3d7xlka603/02-loud-thoughts.mp4.mp4?rlkey=fse205d4h2gktepzvxyz6zqis&st=5mh9rfqu", caption:"Loud Thoughts", likes: 9800, comments: 201},
@@ -109,8 +121,6 @@
   const ui = document.getElementById('ui');
 
   let i = 0, timer = null, finished = false;
-
-  // Track likes per clip for this viewing session
   const liked = new Array(clips.length).fill(false);
 
   // Prevent scroll and zoom
@@ -133,7 +143,7 @@
     const baseComments = clips[i].comments;
     likeCountEl.textContent = fmt(baseLikes + (liked[i] ? 1 : 0));
     commentCountEl.textContent = fmt(baseComments);
-    shareCountEl.textContent = ''; // decorative only
+    shareCountEl.textContent = ''; // decorative
     likeBtn.classList.toggle('liked', liked[i]);
   }
 
